--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@
 
 body {
     color: black;
+    background: white;
     font-weight: 300;
     font-size: 16px;
     line-height: 22px;
@@ -42,6 +43,20 @@ h2, h3, h4 {
     margin: 0px auto;
 }
 
+section p {
+    color #848484;
+}
+
+footer {
+    background-color: black;
+    border-top: 1px solid rgba(0,0,0,0.085);
+    box-shadow: inset 0 0 1px 0 0 rgba(255,255,255,0.8);
+}
+
 footer a {
     color: white;
+}
+
+aside h3 {
+    color #848484;
 }
