--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,16 +15,61 @@ nav {
     text-align: right;
 }
 
+/* All classes beginning with 'col'*/
+*[class*='col'] {
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.col-1-2 {
+    width: 50%
+}
+
+.col-2-3 {
+    width: 66.6%
+}
+
+.col-1-3 {
+    width: 33.3%
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.col-1-2 img {
+    width: 100%;
+}
+
 a {
     text-decoration: none;
 }
 
 header a {
+}
+
+header li {
+    display: inline-block;
+}
+
+header li a {
     color: black;
 }
 
-header a:hover {
+header li:hover {
+    box-shadow: 0 3px 0 0 #45a2da;
     color: #45a2da;
+}
+
+.alt-list {
+    background-color: black;
+}
+
+.alt-list a {
+    color: white;
 }
 
 h1, h2, h3, h4 {
@@ -50,11 +95,11 @@ section p {
 footer {
     background-color: black;
     border-top: 1px solid rgba(0,0,0,0.085);
-    box-shadow: inset 0 0 1px 0 0 rgba(255,255,255,0.8);
+    /*box-shadow: inset 0em 0em 1px rgba(255,255,255,0.8);*/
 }
 
 footer a {
-    color: white;
+    color: black;
 }
 
 aside h3 {
